# gd32e23x-hal

./: Cargo.toml
.cargo/: config
examples/: blinky.rs
src/: lib.rs
