[package]
name = "gd32e23x-hal"
version = "0.1.0"
edition = "2018"
authors = ["featherfly <featherfly@foxmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the GD32E23x family of microcontrollers"
keywords = ["arm", "cortex-m23", "gd32", "hal"]
license = "MIT OR Apache-2.0"
# repository = "https://github.com/gd32-rs/gd32e23x-hal"
# documentation = "https://docs.rs/gd32e23x-hal"
readme = "README.md"

[package.metadata.docs.rs]
features = ["gd32e230", "rt"]
# features = ["gd32e230", "rt", "gd32-usbd"]
default-target = "x86_64-unknown-linux-gnu"
# default-target = "thumbv8m.main-none-eabi"

[dependencies]
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
nb = "1.0.0"
embedded-dma = "0.1.2"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.3", default-features = false }
embedded-hal = { version = "0.2.4", features = ["unproven"] }
gd32e23x-pac = {path = "../gd32-pac/gd32e23x-pac"}

as-slice = "0.1.4"

# [dependencies.stm32-usbd]
# version = "0.5.0"
# features = ["ram_access_1x16"]
# optional = true

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.4"
panic-itm = "0.4.1"
cortex-m-rtfm = "0.5.3"
cortex-m-semihosting = "0.3.5"
# heapless = "0.4.3"
heapless = "0.5.6"
m = "0.1.1"
mfrc522 = "0.2.0"
serde_derive = "1.0.117"
usb-device = "0.2.7"
usbd-serial = "0.1.1"

[dev-dependencies.byteorder]
default-features = false
version = "1.3.4"

[dev-dependencies.cobs]
default-features = false
version = "0.1.4"

[dev-dependencies.crc16]
default-features = false
version = "0.4.0"

[dev-dependencies.either]
default-features = false
# version = "1.5.2"
version = "1.6.1"

[dev-dependencies.serde]
default-features = false
version = "1.0.117"

[features]
device-selected = []
doc = []
rt = ["gd32e23x-pac/rt"]
gd32e230 = ["gd32e23x-pac/gd32e230", "device-selected"]
gd32e231 = ["gd32e23x-pac/gd32e231", "device-selected"]
# gd32e232 = ["gd32e23x-pac/gd32e232", "device-selected"]

# Devices with 16 or 48 Kb ROM
low = []
# Devices with 64 or 128 Kb ROM
medium = []
# Devices with 256 or 512 Kb ROM
high = ["medium"]
# Devices with 768 Kb ROM or more
xl = ["high"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

# [[example]]
# name = "usb_serial"
# required-features = ["rt", "stm32-usbd"]

# [[example]]
# name = "usb_serial_interrupt"
# required-features = ["rt", "stm32-usbd"]

# [[example]]
# name = "usb_serial_rtfm"
# required-features = ["rt", "stm32-usbd"]

# [[example]]
# name = "blinky_timer_irq"
# required-features = ["rt"]

# [[example]]
# name = "blinky_rtcalarm_irq"
# required-features = ["rt"]

# [[example]]
# name = "qei"
# required-features = ["medium"]

# [[example]]
# name = "timer-interrupt-rtfm"
# required-features = ["rt", "medium"]

# [[example]]
# name = "exti"
# required-features = ["rt"]
